# advent-of-code-2021

./: .gitignore  Readme.md  create_day.py  pyproject.toml
2024-golang/: Readme.md  main.go
2024-golang/src/lib/: fake_input.txt  file_load.go  file_load_test.go  maths.go
src/: __init__.py  entrypoint.py
src/day_1/: main.py
src/day_10/: main.py
src/day_11/: main.py
src/day_12/: main.py
src/day_13/: main.py
src/day_14/: main.py
src/day_15/: main.py
src/day_16/: main.py
src/day_17/: main.py
src/day_18/: main.py
src/day_19/: main.py
src/day_2/: main.py
src/day_20/: main.py
src/day_21/: main.py
src/day_22/: main.py
src/day_23/: main.py
src/day_24/: Byhand.xlsx  main.py
src/day_3/: main.py
src/day_4/: main.py
src/day_5/: main.py
src/day_6/: main.py
src/day_7/: main.py
src/day_8/: main.py
src/day_9/: main.py
src/helpers/: coordinates.py  debug.py  files.py  perf.py
src/random/: data_annotation_pipes.py
src/template_day/: main.py
src/year_2021/day_1/: main.py
src/year_2021/day_10/: main.py
src/year_2021/day_11/: main.py
src/year_2021/day_12/: main.py
src/year_2021/day_13/: main.py
src/year_2021/day_14/: main.py
src/year_2021/day_15/: main.py
src/year_2021/day_16/: main.py
src/year_2021/day_17/: main.py
src/year_2021/day_18/: main.py
src/year_2021/day_19/: main.py
src/year_2021/day_2/: main.py
src/year_2021/day_20/: main.py
src/year_2021/day_21/: main.py
src/year_2021/day_22/: main.py
src/year_2021/day_23/: main.py
src/year_2021/day_24/: main.py
src/year_2021/day_25/: main.py
src/year_2021/day_3/: main.py
tests/day_1/: test_day_1.py
tests/day_10/: test_day_10.py
tests/day_11/: test_day_11.py
tests/day_12/: test_day_12.py
tests/day_13/: test_day_13.py
tests/day_14/: test_day_14.py
tests/day_15/: test_day_15.py
tests/day_16/: test_day_16.py
tests/day_17/: test_day_17.py
tests/day_18/: test_day_18.py
tests/day_19/: test_day_19.py
tests/day_2/: test_day_2.py
tests/day_20/: test_day_20.py
tests/day_21/: test_day_21.py
tests/day_22/: test_day_22.py
tests/day_23/: test_day_23.py  test_input_2.txt
tests/day_24/: test_day_24.py
tests/day_3/: test_day.py  test_day_3.py
tests/day_4/: test_day_4.py
tests/day_5/: test_day_5.py
tests/day_6/: test_day_6.py
tests/day_7/: test_day_7.py
tests/day_8/: test_day_8.py
tests/day_9/: test_day_9.py
tests/random/: test_data_annotation_pipes.py
tests/template_tests/: day.py
(+53 files in other folders)
