[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Jack Mead <jack-mead@hotmail.co.uk>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day1 = "src.day_1.main:run"
day2 = "src.day_2.main:run"
day3 = "src.day_3.main:run"
day4 = "src.day_4.main:run"
day5 = "src.day_5.main:run"
day6 = "src.day_6.main:run"
day7 = "src.day_7.main:run"
day8 = "src.day_8.main:run"
day9 = "src.day_9.main:run"
day10 = "src.day_10.main:run"
day11 = "src.day_11.main:run"
day12 = "src.day_12.main:run"
day13 = "src.day_13.main:run"
day14 = "src.day_14.main:run"