[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Jack Mead <jack-mead@hotmail.co.uk>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.entrypoint:run"
create = "create_day"

[tool.pytest.ini_options]
pythonpath = [
  "."
]